Functional version with possible answers alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,8 @@ header .jumbotron {
     color: white;
     opacity: 0.9;
     /* Controling the size of a jumbotron */
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-bottom: 0px;
 }
 
@@ -106,23 +106,28 @@ header .jumbotron {
     flex-direction: column;
 }
 
+/* .form-check {
+    border: 2px solid black;
+} */
+
 .instructionsArea {
-    padding: 20px 0 10px 10px;
+    padding: 0px 10px 0px 40px;
 }
 
 .questionArea {
-    padding: 20px 0 10px 10px;
+    padding: 0px 20px 0px 30px;
     color: green;
 }
 
 .posibleAnswers {
-    padding: 20px 0 10px 10px;
-    font-size:22px;
+    padding: 2px 10px 2px 50px;
+    font-size:20px;
     font-weight: bold;
+    /* border: 2px solid red; */
 }
 
 .answerArea {
-    padding: 20px 0 10px 10px;
+    padding: 5px 0 10px 50px;
     color: rgb(128, 0, 96);
 }
 
@@ -134,6 +139,7 @@ header .jumbotron {
     margin: 20px 0 20px 0;
     padding-top: 0px;
 }
+
 
 /*  Footer ..................................... */
 
